# X-Vector-Pro

./: Main.py  README.md  SECURITY.md  app.py  config.json  cve_db.json  install.sh  main.py  mkdocs.yml  pi_python.py  pyproject.toml  requirements.txt  run.sh  test_recon.py  wp_gui_brute.py  wp_gui_brute_force.py  xvector_pro.py
.github/workflows/: ci.yml
DEBIAN/: __init__.py  control  control.py
Main.py/exploits/: revslider_upload_rce.py
X_Vector_Pro/: .gitignore  README.md  README.txt  config.json  cve_db.json  dashboard.py  install.sh  main.py  main_ctk.py  main_pyqt.py  requirements.txt  run.sh  start_xvector.sh
X_Vector_Pro/DEBIAN/: control
X_Vector_Pro/core/: __init__.py  brute.py  controller.py  cve_lookup.py  exploit_01.py  exploit_runner.py  logger.py  recon.py  report.py  scanner.py  session_manager.py  settings.py
X_Vector_Pro/data/: __init__.py  config.json  cve_db.json  targets.txt  wordlist.txt
X_Vector_Pro/engine/: auto_mode.py  brute_engine.py  cve_scanner.py  dirs.py  exploit_runner.py  exploits.py  plugins.py  recon.py
X_Vector_Pro/exploits/: __init__.py  brizy_file_upload.py  revslider_upload_rce.py  royal_elementor_stored_xss.py  wp_ajax_upload_shell.py  wp_dgs_rce.py  wp_job_board_priv_escalation.py  wp_spam_plugin_rce.py  wpc_admin_column_rce.py
X_Vector_Pro/gui/: Timeline.py  __init__.py  base_tab.py  dashboard.py  main_gui.py  main_ui.py  tabs.py
X_Vector_Pro/logs/: xvector_log.txt
assets/: __init__.py
core/: __init__.py  auto_chain.py  auto_controller.py  auto_mode.py  base64_decoder.py  brute.py  brute_force.py  brute_force_wallet.py  config.py  controller.py  cve_lookup.py  fetch_headers.py  gui_bruteforce.py  logger.py  main.py  memory_scan.py  recon.py  report.py  reports.py  scanner.py  session_manager.py  ssl_checker.py  tabs.py  test_exploit01.py  test_logger.py  tor_manager.py
data/: __init__.py  config.json  cve_db.json
docs/: architecture.md  developer_guide.md  index.md  roadmap.md  usage.md
engine/: README.md  __init__.py  cve_checker.py  exploit_runner.py  exploits.py  ports.py  recon.py  report.py  scanner.py  threading_manager.py
gui/: README.md  __init__.py  app.py  auto_tab.py  base_tab.py  brute_tab.py  dashboard.py  exploits_tab.py  gui.py  logs_tab.py  main.py  main_ui.py  recon_tab.py  settings.py  settings_tab.py  splash_screen.py  tabs.py  training_tab.py
logs/: __init__.py  x_vector_log.txt
reports/: last_recon.json  reports.txt
tests/: __init__.py  test_tor_detector.py
ui/: Dashboard.py  __init__.py  findings_tab.py  tabs_directory.py
usr/local/: exe
utils/: __init__.py  ascii_banner.py  generator.py  logger.py  net_helpers.py  proxy_manager.py  proxy_rotator.py  settings.py  setup_logger.py  splash.py  stealth.py  toast.py  xmlrpc_utils.py
wordlists/: Walk_The_Line.txt  flagged_users.txt  phishing_keywords.txt  plugins.txt  scam_domains.txt  themes.txt
(+239 files in other folders)
