[build-system]
requires = ["setuptools>=60.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name             = "x-vector-pro"
version          = "1.0.0"
description      = "Advanced modular cybersecurity tool for Windows"
readme           = "README.md"
license          = { file = "LICENSE" }
authors          = [{ name = "Erik G.", email = "erik@example.com" }]
requires-python  = ">=3.8"
keywords         = ["cybersecurity", "modular", "windows"]
classifiers      = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Topic :: Security :: Vulnerability Scanning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: Microsoft :: Windows"
]
homepage         = "https://github.com/erikg713/x-vector-pro"
repository-url   = "https://github.com/erikg713/x-vector-pro-GUI-tool.git"

[project.dependencies]
requests                 = ">=2.28,<3.0"
pymongo                  = ">=4.3,<5.0"
customtkinter            = ">=5.0,<6.0"
nmap                     = ">=0.7.1,<1.0"
python-nmap              = ">=0.7.1,<1.0"
rich                     = ">=12.6,<13.0"
colorama                 = ">=0.4,<1.0"
concurrent-log-handler   = ">=0.9,<1.0"
beautifulsoup4           = ">=4.11,<5.0"
lxml                     = ">=4.9,<5.0"
scapy                    = ">=2.5,<3.0"
aiohttp                  = ">=3.8,<4.0"
tldextract               = ">=3.4,<4.0"
email-validator          = ">=1.3,<2.0"
psutil                   = ">=5.9,<6.0"
netifaces                = ">=0.11,<1.0"
selenium                 = ">=4.8,<5.0"
paramiko                 = ">=2.12,<3.0"

[project.optional-dependencies]
testing = [
  "pytest>=7.2,<8.0",
  "pytest-cov>=4.0,<5.0"
]
linting = [
  "black>=23.1,<24.0",
  "flake8>=5.0,<6.0",
  "mypy>=1.2,<2.0"
]
all = ["testing", "linting"]
